K8S/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: 889149267524.dkr.ecr.us-east-1.amazonaws.com/go_app:latest
          ports:
            - containerPort: 9090
