K8S/statefull.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: ingress-nginx
spec:
  serviceName: "db-service"
  selector:
    matchLabels:
      app: mysql
  updateStrategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteMany"]
        storageClassName: ""
        resources:
          requests:
            storage: 1Gi
