K8S/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: app-service
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: ingress-nginx
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
