K8S/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: go-app.com
      http:
        paths:
          - path: /go-app/(.*)
            pathType: Prefix
            backend:
              service:
                name: go-app-svc
                port:
                  number: 9090
